--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
             android:id="@+id/top_sq"
             android:layout_height="0dp"
             android:layout_width="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="4"
             android:orientation="horizontal">
         <TextView
 
@@ -28,11 +28,17 @@
         />
     </LinearLayout>
     <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="#363636"
+    ></LinearLayout>
+    <LinearLayout
             android:background="@color/colorPrimary"
             android:id="@+id/bot_sq"
             android:layout_height="0dp"
             android:layout_width="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="4"
             android:orientation="horizontal">
     <TextView
             android:layout_gravity="left|center_vertical"
