--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,35 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="#363636"
-    ></LinearLayout>
+            android:orientation="vertical">
+        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:layout_gravity="center"
+                      android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_settings_black_24dp">
+
+        </Button>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_pause_black_24dp">
+
+        </Button>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_replay_black_24dp">
+
+        </Button>
+        </LinearLayout>
+    </LinearLayout>
     <LinearLayout
             android:background="@color/colorPrimary"
             android:id="@+id/bot_sq"
