--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+android:background="#363636">
     <LinearLayout
+            android:layout_margin="10dp"
             android:background="@color/colorPrimaryDark"
             android:id="@+id/top_sq"
             android:layout_height="0dp"
             android:layout_width="match_parent"
-            android:layout_weight="4"
+            android:layout_weight="5"
             android:orientation="horizontal">
         <TextView
 
@@ -33,10 +35,12 @@
             android:layout_weight="1"
             android:background="#363636"
             android:orientation="vertical">
-        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
-                      android:layout_gravity="center"
-                      android:layout_weight="1"
-        android:orientation="horizontal">
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
         <Button
                 android:layout_width="wrap_content"
@@ -62,11 +66,12 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
+            android:layout_margin="10dp"
             android:background="@color/colorPrimary"
             android:id="@+id/bot_sq"
             android:layout_height="0dp"
             android:layout_width="match_parent"
-            android:layout_weight="4"
+            android:layout_weight="5"
             android:orientation="horizontal">
     <TextView
             android:layout_gravity="left|center_vertical"
