--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@ android:background="#363636">
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:id="@+id/settings_button"
                 android:background="@drawable/ic_settings_black_24dp">
 
         </Button>
@@ -53,6 +54,7 @@ android:background="#363636">
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:id="@+id/pause_button"
                 android:background="@drawable/ic_pause_black_24dp">
 
         </Button>
@@ -60,6 +62,7 @@ android:background="#363636">
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:id="@+id/restart_button"
                 android:background="@drawable/ic_replay_black_24dp">
 
         </Button>
