--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,9 +72,7 @@ android:background="#363636">
 <!--                    android:layout_width="wrap_content"-->
 <!--                    android:layout_height="wrap_content"-->
 <!--                    android:layout_gravity="center"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:background="@drawable/ic_lightbulb"-->
-<!--                    android:onClick="bulbClicked">-->
+<!--                    android:background="@drawable/ic_lightbulb">-->
 <!--            </Button>-->
         </LinearLayout>
     </LinearLayout>
