--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,13 +67,13 @@ android:background="#363636">
 
             </Button>
 
-<!--            <Button-->
-<!--                    android:id="@+id/action_theme"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_gravity="center"-->
-<!--                    android:background="@drawable/ic_lightbulb">-->
-<!--            </Button>-->
+            <Button
+                    android:id="@+id/action_theme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_lightbulb">
+            </Button>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
