referenced layout colors to resources file increased contrast

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
         <item name="bulbColor">@color/bulbColor</item>
         <item name="settingsBar">@color/settingsBar</item>
+
+        <item name="topClockText">@color/topClockText</item>
+        <item name="bottomClockText">@color/bottomClockText</item>
     </style>
 
 </resources>
