--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
+        android:background="@color/settingsBar"
         android:orientation="vertical"
-android:background="#363636">
+        tools:context=".MainActivity">
+
     <LinearLayout
-            android:layout_margin="10dp"
-            android:background="@color/colorPrimaryDark"
             android:id="@+id/top_sq"
-            android:layout_height="0dp"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
             android:layout_weight="5"
+            android:background="@color/colorPrimaryDark"
             android:orientation="horizontal">
+
         <TextView
 
-                android:layout_gravity="left|center_vertical"
-                android:textAlignment="center"
-                android:textColor="#ededed"
-                android:layout_weight="1"
+                android:id="@+id/top_clock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/top_clock"
-                android:text="15:00"
-                android:textSize="128dp"
+                android:layout_gravity="left|center_vertical"
+                android:layout_weight="1"
                 android:rotation="180"
-        />
+                android:text="15:00"
+                android:textAlignment="center"
+                android:textColor="@color/topClockText"
+                android:textSize="128dp" />
     </LinearLayout>
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="#363636"
+            android:background="@color/settingsBar"
             android:orientation="vertical">
 
         <LinearLayout
@@ -72,28 +73,29 @@ android:background="#363636">
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="@drawable/ic_lightbulb">
-            </Button>
+                    android:background="@drawable/ic_lightbulb"></Button>
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
-            android:layout_margin="10dp"
-            android:background="@color/colorPrimary"
             android:id="@+id/bot_sq"
-            android:layout_height="0dp"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
             android:layout_weight="5"
+            android:background="@color/colorPrimary"
             android:orientation="horizontal">
-    <TextView
-            android:layout_gravity="left|center_vertical"
-            android:textAlignment="center"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bot_clock"
-            android:text="15:00"
-            android:textSize="128dp"
-    />
+
+        <TextView
+                android:id="@+id/bot_clock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:layout_weight="1"
+                android:text="15:00"
+                android:textAlignment="center"
+                android:textColor="@color/bottomClockText"
+                android:textSize="128dp" />
     </LinearLayout>
 
 </LinearLayout>
