--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,6 +3,10 @@
     <color name="colorPrimary">@android:color/white</color>
     <color name="colorPrimaryDark">@android:color/white</color>
     <color name="colorAccent">@android:color/holo_blue_light</color>
+
     <color name="bulbColor">@android:color/black</color>
     <color name="settingsBar">#7A7979</color>
+
+    <color name="topClockText">#686464</color>
+    <color name="bottomClockText">#323131</color>
 </resources>
