--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,4 +2,6 @@
 <resources>
     <attr name="bulbColor" format="color"/>
     <attr name="settingsBar" format="color"/>
+    <attr name="topClockText" format="color"/>
+    <attr name="bottomClockText" format="color"/>
 </resources>
