--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
     <color name="bulbColor">@android:color/white</color>
     <color name="settingsBar">#201F1F</color>
+
+    <color name="topClockText">#ededed</color>
+    <color name="bottomClockText">@android:color/secondary_text_light</color>
 </resources>
