--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -18,20 +18,19 @@
             android:paddingTop="15dp"
             android:layout_marginLeft="15dp"
             android:paddingBottom="15dp"
-            app:layout_constraintBottom_toTopOf="@id/tabLayout"></TextView>
-
-    <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
-
+            ></TextView>
     <android.support.design.widget.TabLayout
-            app:layout_constraintTop_toBottomOf="@id/tabLayout"
+
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="fixed"
             app:tabGravity="fill"/>
+    <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
