Added settingsfragment layout, fixed style font issue in tablayout (20sp style.xml)

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,7 +20,7 @@
             android:paddingBottom="15dp"
             ></TextView>
     <android.support.design.widget.TabLayout
-
+            app:tabTextAppearance="@style/TabLayoutFontSize"
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
