--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,12 +4,187 @@
         android:layout_height="match_parent">
 <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+        android:orientation="vertical">
+      <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+
+                android:layout_marginTop="45dp"
+                android:textSize="20sp"
+                android:textColor="#ABABAB"
+                android:letterSpacing="0.05"
+                android:text="TOP CLOCK"
+                />
+        <TableRow
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#ABABAB"></TableRow>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="30dp">
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="Time"
+                    android:textSize="20dp"
+                    android:textColor="@android:color/black"
+                    android:textAlignment="textStart"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="22dp"></TextView>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:textAlignment="textEnd"
+                    android:gravity="center"
+                    android:text="15:00"
+                    android:textSize="20dp"
+                    android:layout_marginRight="50dp"
+                    ></TextView>
+        </LinearLayout>
+        <TableRow
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#ABABAB"></TableRow>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="30dp">
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="Increment"
+                    android:textSize="20dp"
+                    android:textColor="@android:color/black"
+                    android:textAlignment="textStart"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="22dp"></TextView>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:textAlignment="textEnd"
+                    android:gravity="center"
+                    android:text="00:05"
+                    android:textSize="20dp"
+                    android:layout_marginRight="50dp"
+                    ></TextView>
+        </LinearLayout>
+        <TableRow
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#ABABAB"></TableRow>
         <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="TOP CLOCK"/>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+
+                android:layout_marginTop="45dp"
+                android:textSize="20sp"
+                android:textColor="#ABABAB"
+                android:letterSpacing="0.05"
+                android:text="BOTTOM CLOCK"
+                />
+        <TableRow
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#ABABAB"></TableRow>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="30dp">
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="Time"
+                    android:textSize="20dp"
+                    android:textColor="@android:color/black"
+                    android:textAlignment="textStart"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="22dp"></TextView>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:textAlignment="textEnd"
+                    android:gravity="center"
+                    android:text="15:00"
+                    android:textSize="20dp"
+                    android:layout_marginRight="50dp"
+                    ></TextView>
+        </LinearLayout>
+        <TableRow
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#ABABAB"></TableRow>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="30dp">
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="Increment"
+                    android:textSize="20dp"
+                    android:textColor="@android:color/black"
+                    android:textAlignment="textStart"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="22dp"></TextView>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:textAlignment="textEnd"
+                    android:gravity="center"
+                    android:text="00:05"
+                    android:textSize="20dp"
+                    android:layout_marginRight="50dp"
+                    ></TextView>
+        </LinearLayout>
+        <TableRow
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#ABABAB"></TableRow>
+
     </LinearLayout>
+    <Button
+            android:layout_marginBottom="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@android:color/holo_blue_light"
+            android:text="Start"
+            android:textColor="@android:color/white"
+            android:layout_gravity="bottom"
+            android:textSize="24dp">
 
-
+    </Button>
 </FrameLayout>
