fixed textAllignment to gravity in layout file

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -35,16 +35,14 @@
                     android:text="Time"
                     android:textSize="20dp"
                     android:textColor="@android:color/black"
-                    android:textAlignment="textStart"
-                    android:gravity="center"
+                    android:gravity="start"
                     android:textStyle="bold"
                     android:layout_marginLeft="22dp"></TextView>
             <TextView
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:textAlignment="textEnd"
-                    android:gravity="center"
+                    android:gravity="end"
                     android:text="15:00"
                     android:textSize="20dp"
                     android:layout_marginRight="50dp"
@@ -68,16 +66,14 @@
                     android:text="Increment"
                     android:textSize="20dp"
                     android:textColor="@android:color/black"
-                    android:textAlignment="textStart"
-                    android:gravity="center"
+                    android:gravity="start"
                     android:textStyle="bold"
                     android:layout_marginLeft="22dp"></TextView>
             <TextView
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:textAlignment="textEnd"
-                    android:gravity="center"
+                    android:gravity="end"
                     android:text="00:05"
                     android:textSize="20dp"
                     android:layout_marginRight="50dp"
@@ -118,16 +114,14 @@
                     android:text="Time"
                     android:textSize="20dp"
                     android:textColor="@android:color/black"
-                    android:textAlignment="textStart"
-                    android:gravity="center"
+                    android:gravity="start"
                     android:textStyle="bold"
                     android:layout_marginLeft="22dp"></TextView>
             <TextView
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:textAlignment="textEnd"
-                    android:gravity="center"
+                    android:gravity="end"
                     android:text="15:00"
                     android:textSize="20dp"
                     android:layout_marginRight="50dp"
@@ -151,16 +145,14 @@
                     android:text="Increment"
                     android:textSize="20dp"
                     android:textColor="@android:color/black"
-                    android:textAlignment="textStart"
-                    android:gravity="center"
+                    android:gravity="start"
                     android:textStyle="bold"
                     android:layout_marginLeft="22dp"></TextView>
             <TextView
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:textAlignment="textEnd"
-                    android:gravity="center"
+                    android:gravity="end"
                     android:text="00:05"
                     android:textSize="20dp"
                     android:layout_marginRight="50dp"
