--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -39,11 +39,13 @@
                     android:textStyle="bold"
                     android:layout_marginLeft="22dp"></TextView>
             <TextView
+                    android:id="@+id/top_time"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:gravity="end"
                     android:text="15:00"
+                    android:onClick="showTimePickerDialog"
                     android:textSize="20dp"
                     android:layout_marginRight="50dp"
                     ></TextView>
@@ -167,6 +169,7 @@
 
     </LinearLayout>
     <Button
+            android:id="@+id/start_button"
             android:layout_marginBottom="30dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
