--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">@android:color/white</color>
-    <color name="colorPrimaryDark">@android:color/white</color>
+    <color name="colorPrimaryDark">@android:color/darker_gray</color>
     <color name="colorAccent">@android:color/holo_blue_light</color>
 
     <color name="bulbColor">@android:color/black</color>
