--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,71 +13,79 @@
             android:layout_height="0dp"
             android:layout_margin="10dp"
             android:layout_weight="5"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorAccent"
             android:orientation="horizontal">
 
         <TextView
 
                 android:id="@+id/top_clock"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="50dp"
+                android:textAlignment="center"
                 android:layout_weight="1"
-                android:fontFamily="@font/digital"
                 android:rotation="180"
                 android:text="15:00"
-                android:textColor="@color/topClockText"
-                android:textSize="150dp" />
+                android:textColor="@color/black"
+                android:textSize="130sp" />
     </LinearLayout>
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/settingsBar"
-            android:orientation="vertical">
+
 
         <LinearLayout
-                android:layout_width="wrap_content"
+                android:paddingRight="80dp"
+                android:paddingLeft="80dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:orientation="horizontal">
+            <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:paddingTop="0dp"
+                    android:paddingBottom="0dp">
 
             <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:id="@+id/settings_button"
+                    android:textColor="@color/white"
                     android:background="@drawable/ic_settings_black_24dp">
 
             </Button>
+            </FrameLayout>
+            <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
             <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:id="@+id/pause_button"
                     android:background="@drawable/ic_pause_black_24dp">
 
             </Button>
-
+            </FrameLayout>
+            <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
             <Button
                     android:id="@+id/restart_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:background="@drawable/ic_replay_black_24dp">
 
             </Button>
+            </FrameLayout>
 
-            <Button
-                    android:id="@+id/action_theme"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@drawable/ic_lightbulb"></Button>
-        </LinearLayout>
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -86,19 +94,18 @@
             android:layout_height="0dp"
             android:layout_margin="10dp"
             android:layout_weight="5"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorAccent"
             android:orientation="horizontal">
 
         <TextView
                 android:id="@+id/bot_clock"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="50dp"
-                android:layout_weight="1"
-                android:fontFamily="@font/digital"
-                android:text="15:00"
                 android:layout_gravity="center"
-                android:textColor="@color/bottomClockText"
-                android:textSize="150dp" />
+                android:textAlignment="center"
+                android:layout_weight="1"
+                android:text="15:00"
+                android:textColor="@color/black"
+                android:textSize="130sp" />
     </LinearLayout>
 </LinearLayout>
