--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#AD98C2</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-
+    <color name="colorAccent">#b9b9b9</color>
+    <color name="white">#FFF</color>
+    <color name="black">#000</color>
     <color name="bulbColor">@android:color/white</color>
     <color name="settingsBar">#201F1F</color>
 
