--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
             android:layout_height="0dp"
             android:layout_margin="10dp"
             android:layout_weight="5"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:orientation="horizontal">
 
         <TextView
@@ -22,10 +22,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textAlignment="center"
                 android:layout_weight="1"
                 android:rotation="180"
                 android:text="15:00"
+                android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="130sp" />
     </LinearLayout>
@@ -94,7 +94,7 @@
             android:layout_height="0dp"
             android:layout_margin="10dp"
             android:layout_weight="5"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:orientation="horizontal">
 
         <TextView
@@ -102,9 +102,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textAlignment="center"
                 android:layout_weight="1"
                 android:text="15:00"
+                android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="130sp" />
     </LinearLayout>
