Fixed coloring switch + invisible pause button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,8 @@
             android:layout_margin="10dp"
             android:layout_weight="5"
             android:background="@color/colorPrimaryDark"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
 
         <TextView
                 android:id="@+id/bot_clock"
