--- a/app/src/main/res/drawable/ic_pause_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_pause_black_24dp.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M6,19h4L10,5L6,5v14zM14,5v14h4L18,5h-4z"
-      android:fillColor="@color/colorAccent"/>
+      android:fillColor="@color/colorPrimaryDark"/>
 </vector>
