--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -175,7 +175,7 @@
             android:layout_marginRight="30dp"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="@android:color/holo_blue_light"
+            android:background="@color/colorPrimary"
             android:text="Start"
             android:textColor="@android:color/white"
             android:layout_gravity="bottom"
