--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <attr name="bulbColor" format="color"/>
     <attr name="settingsBar" format="color"/>
+
     <attr name="topClockText" format="color"/>
+    <attr name="topOffClockText" format="color"/>
     <attr name="bottomClockText" format="color"/>
+    <attr name="bottomOffClockText" format="color"/>
 </resources>
