--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,9 +2,10 @@
 <resources>
     <color name="colorPrimary">@android:color/white</color>
     <color name="colorPrimaryDark">@android:color/darker_gray</color>
-    <color name="colorAccent">@android:color/holo_blue_light</color>
 
+    <color name="colorAccent">@android:color/holo_blue_light</color>
     <color name="settingsBar">#7A7979</color>
+    <color name="buttonColor">#000</color>
 
     <color name="topClockText">#686464</color>
     <color name="topOffClockText">#00423B</color>
