--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="settingsBar" format="color"/>
+    <attr name="buttonColor" format="color"/>
 
     <attr name="topClockText" format="color"/>
     <attr name="topOffClockText" format="color"/>
