--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,7 +8,7 @@
     <color name="buttonColor">#000</color>
 
     <color name="topClockText">#686464</color>
-    <color name="topOffClockText">#00423B</color>
+    <color name="topOffClockText">#b9b9b9</color>
     <color name="bottomClockText">#323131</color>
-    <color name="bottomOffClockText">#00423B</color>
+    <color name="bottomOffClockText">#b9b9b9</color>
 </resources>
