--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@android:color/white</color>
-    <color name="colorPrimaryDark">@android:color/darker_gray</color>
-
-    <color name="colorAccent">@android:color/holo_blue_light</color>
-    <color name="settingsBar">#7A7979</color>
-    <color name="buttonColor">#000</color>
-
+    <color name="colorInactive">@android:color/darker_gray</color>
+    <color name="colorActive">@android:color/holo_blue_light</color>
+    <color name="colorActiveText">#FFF</color>
+    <color name="colorInactiveText">#000</color>
+    <color name="colorDashboard">#7A7979</color>
     <color name="topClockText">#686464</color>
     <color name="topOffClockText">#b9b9b9</color>
     <color name="bottomClockText">#323131</color>
