--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,12 +3,13 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="settingsBar">@color/settingsBar</item>
-        <item name="buttonColor">@color/buttonColor</item>
+        <item name="colorActive">@color/colorActive</item>
+        <item name="colorInactive">@color/colorInactive</item>
+
+        <item name="colorDashboard">@color/colorDashboard</item>
+        <item name="colorActiveText">@color/colorActiveText</item>
+        <item name="colorInactiveText">@color/colorInactiveText</item>
 
         <item name="topClockText">@color/topClockText</item>
         <item name="topOffClockText">@color/topOffClockText</item>
