--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -21,6 +21,8 @@
             ></TextView>
     <android.support.design.widget.TabLayout
             app:tabTextAppearance="@style/TabLayoutFontSize"
+            app:tabSelectedTextColor="@color/colorActive"
+            app:tabIndicatorColor="@color/colorActive"
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
