--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#AD98C2</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#b9b9b9</color>
-    <color name="colorPrimaryDark">#b9b9b9</color>
-    <color name="colorAccent">#AD98C2</color>
-    <color name="white">#FFF</color>
-    <color name="black">#000</color>
-    <color name="bulbColor">@android:color/white</color>
-    <color name="settingsBar">#201F1F</color>
-    <color name="buttonColor">#b9b9b9</color>
+    <color name="colorActive">#AD98C2</color>
+    <color name="colorInactive">#989896</color>
+    <color name="colorActiveText">#FFF</color>
+    <color name="colorInactiveText">#000</color>
+    <color name="colorDashboard">#201F1F</color>
 
     <color name="topClockText">#ededed</color>
-    <color name="topOffClockText">#00423B</color>
+    <color name="topOffClockText">#FF7BDF</color>
     <color name="bottomClockText">#ededed</color>
-    <color name="bottomOffClockText">#00423B</color>
+    <color name="bottomOffClockText">#989896</color>
 </resources>
