changed coloring for digital theme

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
                     android:id="@+id/top_clock2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:alpha="0.15"
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:fontFamily="@font/digital"
@@ -52,7 +53,7 @@
                     android:rotation="180"
                     android:text="15:00"
                     android:textAlignment="center"
-                    android:textColor="@color/topClockText"
+                    android:textColor="@color/colorInactiveText"
                     android:textSize="130sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -145,6 +146,7 @@
                     android:fontFamily="@font/digital"
                     android:text="88:88"
                     android:textAlignment="center"
+                    android:alpha="0.15"
                     android:textColor="@color/bottomOffClockText"
                     android:textSize="130sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -162,7 +164,7 @@
                     android:fontFamily="@font/digital"
                     android:text="15:00"
                     android:textAlignment="center"
-                    android:textColor="@color/bottomClockText"
+                    android:textColor="@color/colorInactiveText"
                     android:textSize="130sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
