added custom TimePicker credit: IvanKovac

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -39,7 +39,7 @@
                     android:textStyle="bold"
                     android:layout_marginLeft="22dp"></TextView>
             <TextView
-                    android:id="@+id/top_time"
+                    android:id="@+id/top_time_s"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
