--- a/app/src/main/res/layout/time_picker_widget.xml
+++ b/app/src/main/res/layout/time_picker_widget.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
+                android:visibility="gone"
                 />
 
         <!-- minute -->
